2006-11-07  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/HTMLEditorKit.java
	(HTMLFactory.create): Include ListView.
	* javax/swing/text/html/ListView.java
	(paint): Removed comment.
	* javax/swing/text/html/StyleSheet.java
	(CSSStyle.priority): New field.
	(CSSStyle.CSSStyle(int)): New constructor with priority.
	(CSSStyle.compareTo): New method. Used for sorting the styles.
	(CSSStyleSheetParserCallback.declaration): Store the style
	with the complete selector.
	(ListPainter.attributes): Renamed as field.
	(ListPainter.styleSheet): New field.
	(ListPainter.type): New field.
	(ListPainter.ListPainter): Pass StyleSheet to constructor.
	(ListPainter.paint): Provide simplistic implementation.
	(getListPainter): Pass StyleSheet to constructor.
	(resolveStyle): Fixed CSS style resolving.

2006-11-07  Roman Kennke  <kennke@aicas.com>

	* gnu/javax/swing/text/html/css/BorderWidth.java:
	New class. Handles CSS border width values.
	* gnu/javax/swing/text/html/css/Length.java
	(floatValue): Made protected so that BorderWidth can access it.
	* javax/swing/text/html/CSS.java
	(Attribute.BORDER_BOTTOM_COLOR): New static field.
	(Attribute.BORDER_BOTTOM_STYLE): New static field.
	(Attribute.BORDER_LEFT_COLOR): New static field.
	(Attribute.BORDER_LEFT_STYLE): New static field.
	(Attribute.BORDER_RIGHT_COLOR): New static field.
	(Attribute.BORDER_RIGHT_STYLE): New static field.
	(Attribute.BORDER_TOP_COLOR): New static field.
	(Attribute.BORDER_TOP_STYLE): New static field.
	(getValue): Added some mappings for the border color and
	border width values.
	* javax/swing/text/html/CSSBorder.java: New class. Implements
	CSS borders.
	* javax/swing/text/html/StyleSheet.java
	(BoxPainter.background): New field.
	(BoxPainter.border): New field.
	(BoxPainter.bottomInset): Documented.
	(BoxPainter.leftInset): Documented.
	(BoxPainter.rightInset): Documented.
	(BoxPainter.topInset): Documented.
	(BoxPainter.BoxPainter): Added support for borders and background.