@@ -337,7 +337,10 @@ public class FlowLayout implements LayoutManager, Serializable
 
 	Insets ins = parent.getInsets ();
 
-	w += (num + 1) * hgap + ins.left + ins.right;
+        if (num == 0)
+          w += 2 * hgap + ins.left + ins.right;
+        else
+          w += (num + 1) * hgap + ins.left + ins.right;
 	h += 2 * vgap + ins.top + ins.bottom;
 
 	return new Dimension (w, h);
